<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llSettings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:text="@string/preferences"
        android:textSize="32sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:text="@string/timetable" />
    <LinearLayout
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/settings_button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnClass"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/settings_button_background01"
            android:paddingVertical="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:id="@+id/tvClassStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/trida"
                android:textColor="@color/n_on_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvClassEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@+id/ivClassStart"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tvClassEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@color/n_on_color"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivClassEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvClassStart"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/ivClassStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_meeting_room_20"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="8dp" />
            <ImageView
                android:id="@+id/ivClassEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_keyboard_arrow_right_20"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnSubjectSelection"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/settings_button_background02"
            android:paddingVertical="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:id="@+id/tvSubjectSelectionStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/subject_selection"
                android:textColor="@color/n_on_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvSubjectSelectionEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@+id/ivSubjectSelectionStart"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tvSubjectSelectionEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@color/n_on_color"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivSubjectSelectionEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvSubjectSelectionStart"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/ivSubjectSelectionStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_school_20"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="8dp" />
            <ImageView
                android:id="@+id/ivSubjectSelectionEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_keyboard_arrow_right_20"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:text="@string/other" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnLocale"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/settings_button_background"
        android:paddingVertical="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:id="@+id/tvLocaleStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/locale"
            android:textColor="@color/n_on_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvLocaleEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/ivLocaleStart"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tvLocaleEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/n_on_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivLocaleEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvLocaleStart"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/ivLocaleStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_language_20"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="8dp" />
        <ImageView
            android:id="@+id/ivLocaleEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/expand_circle_down"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: FIX RESTART REQUIREMENT -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:text="@string/restart_required" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnVisibilityPrefs"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/settings_button_background"
        android:paddingVertical="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:id="@+id/tvVisibilityPrefsStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/visibility_prefs"
            android:textColor="@color/n_on_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvVisibilityPrefsEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/ivVisibilityPrefsStart"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tvVisibilityPrefsEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/n_on_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivVisibilityPrefsEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvVisibilityPrefsStart"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/ivVisibilityPrefsStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_settings_20"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="8dp" />
        <ImageView
            android:id="@+id/ivVisibilityPrefsEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_arrow_right_20"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:text="@string/view_changelog_note" />
        <Button
            app:cornerRadius="0dp"
            android:id="@+id/btnChangelog"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingEnd="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingStart="4dp"
            android:minHeight="0dp"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="normal"
            android:text="@string/view_changelog"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_note"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnFeedback"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingEnd="4dp"
            android:paddingBottom="0dp"
            android:text="@string/send_feedback"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>